# bank-complaint-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  cfpb_dataset_reference.numbers  cfpb_dataset_reference.xlsx  pyproject.toml
data/eval/: README.md
docs/: decisions.md  eval-results.md  github-setup.md  resume-bullets.md
src/data/: deduplicate_corpus.py  download_cfpb.py
